fix bug form overflow

--- a/src/component/form-input/Form-input.scss
+++ b/src/component/form-input/Form-input.scss
@@ -16,12 +16,15 @@ $main-color: #67D9B7;
   position: relative;
   border-radius: 5px;
   border: 1px solid #6CEEC7;
+  background-color: transparent;
+  overflow: hidden;
   
   .pass{-webkit-text-security: square;}
   
   .form-input {
     position: relative;
     left: 35px;
+    
     
    
     background: none;
